{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 63,
  "lineage": "7587eb37-86a5-433a-cf9d-b2ee630bf27a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Insta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0753e0e42b20e96e3",
            "arn": "arn:aws:ec2:ap-southeast-1:912865153494:instance/i-01145a027ee69eeaf",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01145a027ee69eeaf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08935cbf90cf9dfe7",
            "private_dns": "ip-192-168-1-80.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ae475383b8683735",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014624262195a37ab",
            "tags": {
              "Name": "MyInstance 1"
            },
            "tags_all": {
              "Name": "MyInstance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7e6657579699da8"
            ]
          },
          "dependencies": [
            "aws_subnet.pub_sub",
            "aws_vpc.singa_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0753e0e42b20e96e3",
            "arn": "arn:aws:ec2:ap-southeast-1:912865153494:instance/i-0cbf4f4496d4be925",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cbf4f4496d4be925",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0103a7ee3feabb413",
            "private_dns": "ip-192-168-1-213.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.213",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-041a19098fde3891e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08fb6f58251eba3c2",
            "tags": {
              "Name": "MyInstance 2"
            },
            "tags_all": {
              "Name": "MyInstance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b7e6657579699da8"
            ]
          },
          "dependencies": [
            "aws_subnet.pub_sub",
            "aws_vpc.singa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912865153494:internet-gateway/igw-07d47a46a9649ffe7",
            "id": "igw-07d47a46a9649ffe7",
            "owner_id": "912865153494",
            "tags": {
              "Name": "def_igw"
            },
            "tags_all": {
              "Name": "def_igw"
            },
            "vpc_id": "vpc-0ecfc432a1b346d31"
          },
          "dependencies": [
            "aws_vpc.singa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "def_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912865153494:loadbalancer/app/def-lb/ab4f28d45d3d67c3",
            "arn_suffix": "app/def-lb/ab4f28d45d3d67c3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "def-lb-480328941.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:912865153494:loadbalancer/app/def-lb/ab4f28d45d3d67c3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "def-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0146e3e22bca4d7c1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-014624262195a37ab"
              },
              {
                "subnet_id": "subnet-08fb6f58251eba3c2"
              }
            ],
            "subnets": [
              "subnet-014624262195a37ab",
              "subnet-08fb6f58251eba3c2"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0ecfc432a1b346d31",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.pub_sub",
            "aws_vpc.singa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "def_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912865153494:listener/app/def-lb/ab4f28d45d3d67c3/c4efedfbabde05c8",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912865153494:targetgroup/tf-def-lb-tg/1a1978382a680ea5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:912865153494:listener/app/def-lb/ab4f28d45d3d67c3/c4efedfbabde05c8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912865153494:loadbalancer/app/def-lb/ab4f28d45d3d67c3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.def_lb",
            "aws_lb_target_group.def_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.pub_sub",
            "aws_vpc.singa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "def_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:912865153494:targetgroup/tf-def-lb-tg/1a1978382a680ea5",
            "arn_suffix": "targetgroup/tf-def-lb-tg/1a1978382a680ea5",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:912865153494:targetgroup/tf-def-lb-tg/1a1978382a680ea5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-def-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "def_tg"
            },
            "tags_all": {
              "Name": "def_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ecfc432a1b346d31"
          },
          "dependencies": [
            "aws_vpc.singa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912865153494:security-group/sg-0146e3e22bca4d7c1",
            "description": "Allow TLS inbound traffic",
            "egress": [],
            "id": "sg-0146e3e22bca4d7c1",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "912865153494",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_alb"
            },
            "tags_all": {
              "Name": "sg_alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ecfc432a1b346d31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.singa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "in-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1924931462",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0146e3e22bca4d7c1",
            "security_group_rule_id": "sgr-08c2eccd392411090",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.singa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "out-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2113780030",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0146e3e22bca4d7c1",
            "security_group_rule_id": "sgr-0bb65ac65bad9b960",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.singa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912865153494:subnet/subnet-014624262195a37ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "192.168.1.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014624262195a37ab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912865153494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub 1"
            },
            "tags_all": {
              "Name": "pub-sub 1"
            },
            "vpc_id": "vpc-0ecfc432a1b346d31"
          },
          "dependencies": [
            "aws_vpc.singa_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912865153494:subnet/subnet-08fb6f58251eba3c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.1.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fb6f58251eba3c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "912865153494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub-sub 2"
            },
            "tags_all": {
              "Name": "pub-sub 2"
            },
            "vpc_id": "vpc-0ecfc432a1b346d31"
          },
          "dependencies": [
            "aws_vpc.singa_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "singa_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:912865153494:vpc/vpc-0ecfc432a1b346d31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/24",
            "default_network_acl_id": "acl-0501e2675633b0d8e",
            "default_route_table_id": "rtb-07b5cbdb65084bfa2",
            "default_security_group_id": "sg-0b7e6657579699da8",
            "dhcp_options_id": "dopt-0090b54a6cb179874",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ecfc432a1b346d31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b5cbdb65084bfa2",
            "owner_id": "912865153494",
            "tags": {
              "Name": "vpc_singa"
            },
            "tags_all": {
              "Name": "vpc_singa"
            }
          }
        }
      ]
    }
  ]
}